--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <h2 id="how-to-use">How to use</h2>
 <p>This is a nodejs web app.</p>
 <h3 id="paths">Paths</h3>
-<h4 id="-getlastposition-mmsi-imo">/getLastPosition/:mmsi/:imo</h4>
-<p>Takes position from MT and from VT and returns the newest<br>example: <a href="http://localhost:5000/getLastPosition/244140096/7302225">http://localhost:5000/getLastPosition/244140096/7302225</a></p>
+<h4 id="-getlastposition-mmsi-imo">/getLastPosition/:mmsi</h4>
+<p>Takes position from MT and from VT and returns the newest<br>example: <a href="http://localhost:5000/getLastPosition/244140096">http://localhost:5000/getLastPosition/244140096</a></p>
 <h4 id="-getlastpositionfromvf-imo">/getLastPositionFromVF/:imo</h4>
-<p>Returns position from VF<br>example: <a href="http://localhost:5000/getLastPositionFromVF/7302225">http://localhost:5000/getLastPositionFromVF/7302225</a></p>
+<p>Returns position from VF<br>example: <a href="http://localhost:5000/getLastPositionFromVF/244140096">http://localhost:5000/getLastPositionFromVF/244140096</a></p>
 <h4 id="-getlastpositionfrommt-mmsi">/getLastPositionFromMT/:mmsi</h4>
 <p>Returns position from MT<br>example: <a href="http://localhost:5000/getLastPositionFromMT/244140096">http://localhost:5000/getLastPositionFromMT/244140096</a></p>
 <h2 id="install-on-local-machine">Install on local machine</h2>
