Added getVesselInPort - Fixed headers (again)

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@ example: <a href="http://localhost:5000/getVesselsInArea/WMED,EMED">http://local
   port_next: vessel.NEXT_PORT_NAME,
 },…]
 </code></pre>
+<h4>/getVesselsInPort/:shipPort</h4>
+<p>Returns all vessels in a port, named after the MT nomenclature
+example: <a href="http://localhost:5000/getVesselsInPort/piraeus">http://localhost:5000/getVesselsInPort/piraeus</a><br>
+Output format identical to <b>getVesselsInArea</b></p>
 <h2>Install on local machine</h2>
 <p>Requirements: npm &#x26; nodejs.</p>
 <ol>
